Working on layout issue on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ p {
 .p--large {
   font-size: 1.125rem;
   font-weight: 600;
-  letter-spacing: .1em;
+  /* letter-spacing: .1em; */
 }
 
 .user-warning {
